# hagstrom-km-firmware

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
.cargo/: config.toml
core/: Cargo.toml
core/src/: emulator.rs  error.rs  lib.rs
core/src/action/: key.rs  key_map.rs  mod.rs  mouse.rs
data/: google-docs-manifest-generator.js  temp.txt
examples/: run-programs.rs
hagstrom/: __init__.py
hagstrom-py/: Cargo.toml
hagstrom-py/src/: lib.py  lib.rs
src/: error.rs  key_map.rs  lib.py  lib.rs  main.rs  setup.py
src/action/: key.rs
