[package]
name = "usb2usb"
version = "0.1.0"
edition = "2021"
authors = ["xiuxiu62 <jacremer@live.com>"]
license = "Unlicense"

[dependencies]
ctrlc = { version = "3.2.1", features = ["termination"], git = "https://github.com/xiuxiu62/rust-ctrlc.git" }
lazy_static = "1.4.0"
serialport = "4.2.0"
structopt = "0.3.26"
thiserror = "1.0.33"
