[project]
name = "lib-hagstrom"
version = "0.2.0"
authors = [
  { name = "xiuxiu62", email = "jacremer@live.com" }
]
description = "Abstraction module for Hagstrom Electronics usbtousb key/mouse emulators"
license = "BSD-3-Clause"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  # "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/xiuxiu62/lib-hagstrom"
"Bug Tracker" = "https://github.com/xiuxiu62/lib-hagstrom/issues"

[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["src/*.py"]
